src/style.css
@import 'tailwindcss';

@import './assets/css/fonts.css';
@import './assets/css/switch.css';
@import './assets/css/theme.css';
@import './assets/css/dropdown.css';
@import './assets/css/button.css';


p, span {
  font-family: 'Inter', sans-serif;
} 

h1, h2, h3, h4, h5, h6 {
  font-family: 'InterTight', sans-serif;
}

.scrollbar-none::-webkit-scrollbar {
  display: none;
}
.scrollbar-none {
  scrollbar-width: none;
  -ms-overflow-style: none;
}


.left-arrow {
  width: 30px;
  height: 30px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  cursor: pointer;
}

.left-arrow {
  background-image: url('./assets/svgs/left_arrow.svg');
  filter: brightness(0) saturate(100%) invert(55%) sepia(65%) saturate(538%) hue-rotate(343deg) brightness(98%) contrast(98%);
}


a {
  cursor: pointer;
  border-radius: 5px;
  padding-right: .3em;
  padding-left: .3em;
  transition: all .2s;
}

a:hover {
  background-color: rgba(199, 199, 199, 0.788);
}


.fade-slide-enter-active,
.fade-slide-leave-active {
  transition: all 0.25s ease;
}

.fade-slide-enter-from {
  opacity: 0;
  transform: translateY(-10px) scale(0.98);
}

.fade-slide-leave-to {
  opacity: 0;
  transform: translateY(-10px) scale(0.98);
}


@keyframes spin {
  to { transform: rotate(360deg); }
}

@keyframes float {
  0% {
    transform: translateY(0px);
  }
  50% {
    transform: translateY(-5px);
  }
  100% {
    transform: translateY(0px);
  }
}

